tdf#150604 Writer Navigator: Make delete shortcut key delete Indexes

Change-Id: I651159794790972b430c9a420d6eaa1ed77e5718
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139550
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit a8e4bf44012139adff7d1343f17edca13a70d0c5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139560
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>